Fixed form label alignment and changed border-radius implementation

--- a/style.css
+++ b/style.css
@@ -40,10 +40,14 @@ button {
 
 button:hover {
   background-color: var(--color-secondary);
+  transform: scale(1.01);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .text-content {
   text-align: right;
+  font-family: monospace;
+  font-size: 1.2rem;
 }
 
 #left-side {
@@ -74,16 +78,32 @@ button:hover {
   color: #ffffff;
 }
 
+.text-content.left {
+  display: inline-block;
+  text-align: center;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.11);
+  padding: 1rem;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 section {
   height: 100vh;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  padding: 2rem;
+  
 }
 
 #right-side {
+  /* Yoinked and modified from https://uiverse.io/adamgiebl/curvy-earwig-79 */
   background-image: linear-gradient(
       0deg,
       transparent 24%,
@@ -117,7 +137,7 @@ form {
   gap: 10px;
   background-color: var(--color-shadow);
   padding: 1.2rem;
-  border-radius: 10px;
+  border-radius: calc(1.2rem + 5px);
   box-shadow: 0 0 20px rgba(232, 74, 47, 0.2);
   max-width: 400px;
   width: 100%;
@@ -154,6 +174,12 @@ form label input + span {
   font-size: 0.9em;
   cursor: text;
   transition: 0.3s ease;
+}
+
+form label input:focus {
+  border-color: var(--color-primary);
+  background-color: rgba(255, 255, 255, 0.05);
+  transition: border-color 0.3s ease, background-color 0.3s ease;
 }
 
 form label input:placeholder-shown + span {
